--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="img/logo.jpeg" alt="FarmXpress Logo" class="logo"></a>
+        <a href="index.html"><img src="/FARMXPRESS/img/logo.jpeg" alt="FarmXpress Logo" class="logo"></a>
+
         <h1>🎮 FarmXpress</h1>
         <p>Farmeo y logros por encargo en tus juegos favoritos</p>
         <nav>
